--- a/iframe.html
+++ b/iframe.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>WhatsApp Web</title>
-</head>
-<iframe src="https://web.whatsapp.com/"></iframe>
+</head><body>
+    <iframe src="https://web.whatsapp.com" width="100%" height="500"></iframe>
+</body>
 </html>
