--- a/iframe.html
+++ b/iframe.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
     <title>WhatsApp Web</title>
-</head><body>
-    <iframe src="https://web.whatsapp.com" width="100%" height="500"></iframe>
+</head>
+<body>
+    <iframe src="https://gudang.allnet.id" width="100%" height="500"></iframe>
 </body>
 </html>
