--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+					<a class="navbar-brand logo_h" href="index.html">Supriadi.io</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -58,7 +58,7 @@
 					<div class="col-lg-8">
 						<div class="banner_content">
 							<h3 class="text-uppercase">Hello</h3>
-							<h1 class="text-uppercase">I am Sonny Michael</h1>
+							<h1 class="text-uppercase">I am Supriadi</h1>
 							<h5 class="text-uppercase">Full Stack Developer</h5>
 							<div class="d-flex align-items-center">
 								<a class="primary_btn" href="#contact"><span>Get In Touch</span></a>
@@ -94,7 +94,7 @@
 						<p>
 							Love to learn something new and easy going. Experienced in three years being programmer I have working on variety project website, apps, and games. 
 						</p>
-						<a class="primary_btn" target="_blank" href="https://drive.google.com/file/d/0B82pgqn92ol3N3BHTXdCc3d3clE/view?usp=sharing"><span>Download CV</span></a>
+						<a class="primary_btn" target="_blank" href="cv.pdf"><span>Download CV</span></a>
 					</div>
 				</div>
 			</div>
